# sourcegraph

./: .bazelrc  BUILD.bazel  CHANGELOG.md  WORKSPACE  bazel-bin  bazel-out  bazel-sourcegraph  bazel-testlogs  go.mod  go.sum  go_repos.bzl  package.json  pnpm-lock.yaml  sg.config.yaml
client/web/src/: Layout.tsx
cmd/frontend/: BUILD.bazel
cmd/frontend/auth/: BUILD.bazel
cmd/frontend/backend/: BUILD.bazel
cmd/frontend/enterprise/: BUILD.bazel
cmd/frontend/graphqlbackend/: BUILD.bazel  batches.go  schema.graphql
cmd/frontend/hubspot/: BUILD.bazel
cmd/frontend/webhooks/: BUILD.bazel
cmd/github-proxy/: BUILD.bazel
cmd/gitserver/: BUILD.bazel  main.go
cmd/gitserver/server/: BUILD.bazel  cleanup.go
cmd/gitserver/server/internal/accesslog/: BUILD.bazel
cmd/loadtest/: BUILD.bazel
cmd/migrator/: BUILD.bazel
cmd/repo-updater/: BUILD.bazel
cmd/repo-updater/repoupdater/: BUILD.bazel
cmd/repo-updater/shared/: BUILD.bazel
cmd/searcher/: BUILD.bazel
cmd/searcher/internal/search/: BUILD.bazel
cmd/server/: BUILD.bazel
cmd/server/internal/goreman/: BUILD.bazel
cmd/server/internal/goremancmd/: BUILD.bazel
cmd/server/shared/: BUILD.bazel
cmd/symbols/: BUILD.bazel
cmd/symbols/fetcher/: BUILD.bazel
cmd/symbols/gitserver/: BUILD.bazel
cmd/symbols/parser/: BUILD.bazel
cmd/symbols/shared/: BUILD.bazel
cmd/symbols/squirrel/: BUILD.bazel
cmd/worker/: BUILD.bazel
cmd/worker/internal/codeintel/: BUILD.bazel
cmd/worker/internal/migrations/: BUILD.bazel
cmd/worker/internal/migrations/migrators/: BUILD.bazel
cmd/worker/internal/webhooks/: BUILD.bazel
cmd/worker/memo/: BUILD.bazel
cmd/worker/shared/: BUILD.bazel
cmd/worker/shared/init/codeintel/: BUILD.bazel
cmd/worker/shared/init/db/: BUILD.bazel
dev/adr-docs/: BUILD.bazel
dev/bkstats/: BUILD.bazel
dev/buildchecker/: BUILD.bazel
dev/ci/go-backcompat/: BUILD.bazel
dev/ci/runtype/: BUILD.bazel
dev/corrupt-archives/: BUILD.bazel
dev/depgraph/: BUILD.bazel
dev/gqltest/: BUILD.bazel
dev/okay/: BUILD.bazel
dev/pr-auditor/: BUILD.bazel
dev/sg/: BUILD.bazel
dev/sg/dependencies/: BUILD.bazel
dev/sg/linters/: BUILD.bazel
dev/sg/root/: BUILD.bazel
dev/src-expose/: BUILD.bazel
dev/team/: BUILD.bazel
doc/admin/extensions/: index.md
doc/cli/references/: BUILD.bazel
doc/extensions/: principles.md  usage.md
enterprise/cmd/executor/: BUILD.bazel
enterprise/cmd/frontend/: BUILD.bazel
enterprise/cmd/precise-code-intel-worker/: BUILD.bazel
enterprise/cmd/repo-updater/: BUILD.bazel
enterprise/cmd/server/: BUILD.bazel
enterprise/cmd/symbols/: BUILD.bazel
enterprise/cmd/worker/: BUILD.bazel
enterprise/dev/ci/: BUILD.bazel  gen-pipeline.go
enterprise/dev/deployment-lag-notifier/: BUILD.bazel
enterprise/dev/deployment-notifier/: BUILD.bazel
enterprise/dev/insight-data-gen/: BUILD.bazel
enterprise/internal/authz/: BUILD.bazel
enterprise/internal/batches/: BUILD.bazel
enterprise/internal/codemonitors/: BUILD.bazel  search.go
enterprise/internal/compute/: BUILD.bazel  match_only_command.go
enterprise/internal/database/: BUILD.bazel
enterprise/internal/executor/: BUILD.bazel
enterprise/internal/insights/: BUILD.bazel
enterprise/internal/license/: BUILD.bazel
enterprise/internal/licensing/: BUILD.bazel
enterprise/internal/notebooks/: BUILD.bazel
enterprise/internal/rockskip/: BUILD.bazel
internal/actor/: BUILD.bazel
internal/adminanalytics/: BUILD.bazel
internal/api/internalapi/: BUILD.bazel
internal/authz/: BUILD.bazel
internal/check/: BUILD.bazel
internal/cmd/ghe-feeder/: BUILD.bazel
internal/cmd/git-combine/: BUILD.bazel
internal/cmd/init-sg/: BUILD.bazel
internal/comby/: BUILD.bazel
internal/conf/: BUILD.bazel  parse.go  validate.go
internal/database/: BUILD.bazel  event_logs.go  mocks_temp.go  schema.json  schema.md
internal/diskcache/: BUILD.bazel
internal/encryption/: BUILD.bazel
internal/encryption/awskms/: BUILD.bazel
internal/encryption/cloudkms/: BUILD.bazel
internal/encryption/keyring/: BUILD.bazel
internal/encryption/mounted/: BUILD.bazel
internal/encryption/testing/: BUILD.bazel
internal/endpoint/: BUILD.bazel
internal/env/: BUILD.bazel
internal/errcode/: BUILD.bazel
internal/extsvc/: BUILD.bazel  types.go
internal/gitserver/: BUILD.bazel
internal/goroutine/: BUILD.bazel
internal/gosyntect/: BUILD.bazel
internal/gqltestutil/: BUILD.bazel
internal/httpcli/: BUILD.bazel
internal/httptestutil/: BUILD.bazel
internal/insights/: BUILD.bazel
internal/inventory/: BUILD.bazel
internal/jsonc/: BUILD.bazel
internal/luasandbox/: BUILD.bazel
internal/luasandbox/util/: BUILD.bazel
internal/mapfs/: BUILD.bazel
internal/metrics/: BUILD.bazel
internal/observation/: BUILD.bazel
internal/oobmigration/: BUILD.bazel
internal/pubsub/: BUILD.bazel
internal/ratelimit/: BUILD.bazel
internal/redispool/: BUILD.bazel
internal/repos/: BUILD.bazel  github.go
internal/repotrackutil/: BUILD.bazel
internal/repoupdater/: BUILD.bazel
internal/search/: BUILD.bazel  types.go
internal/security/: BUILD.bazel
internal/slack/: BUILD.bazel
internal/src-cli/: BUILD.bazel
internal/src-prometheus/: BUILD.bazel
internal/symbols/: BUILD.bazel
internal/sysreq/: BUILD.bazel
internal/timeutil/: BUILD.bazel
internal/trace/: BUILD.bazel
internal/trace/ot/: BUILD.bazel
internal/tracer/: BUILD.bazel
internal/txemail/: BUILD.bazel
internal/types/: BUILD.bazel
internal/unpack/: BUILD.bazel
internal/uploadstore/: BUILD.bazel
internal/usagestats/: BUILD.bazel
internal/vcs/: BUILD.bazel
internal/version/: BUILD.bazel
internal/workerutil/: BUILD.bazel
lib/: go.mod
migrations/: BUILD.bazel
migrations/frontend/: squashed.sql
monitoring/: BUILD.bazel
monitoring/definitions/: BUILD.bazel
monitoring/definitions/shared/: BUILD.bazel
monitoring/monitoring/: BUILD.bazel
monitoring/monitoring/internal/grafana/: BUILD.bazel
schema/: schema.go  settings.schema.json  site.schema.json
third-party-licenses/: ThirdPartyLicenses.csv
ui/assets/: BUILD.bazel
(+324 files in other folders)
