load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrations",
    srcs = ["embed.go"],
    embedsrcs = [
        "codeinsights/1000000027_squashed_migrations_privileged/down.sql",
        "codeinsights/1000000027_squashed_migrations_privileged/metadata.yaml",
        "codeinsights/1000000027_squashed_migrations_privileged/up.sql",
        "codeinsights/1646761143_squashed_migrations_unprivileged/down.sql",
        "codeinsights/1646761143_squashed_migrations_unprivileged/metadata.yaml",
        "codeinsights/1646761143_squashed_migrations_unprivileged/up.sql",
        "codeinsights/1647894746_dashboard_type/down.sql",
        "codeinsights/1647894746_dashboard_type/metadata.yaml",
        "codeinsights/1647894746_dashboard_type/up.sql",
        "codeinsights/1649801281_context_filters/down.sql",
        "codeinsights/1649801281_context_filters/metadata.yaml",
        "codeinsights/1649801281_context_filters/up.sql",
        "codeinsights/1651021000_sort_series/down.sql",
        "codeinsights/1651021000_sort_series/metadata.yaml",
        "codeinsights/1651021000_sort_series/up.sql",
        "codeinsights/1652289966_deprecate-search-stream-generation-method/down.sql",
        "codeinsights/1652289966_deprecate-search-stream-generation-method/metadata.yaml",
        "codeinsights/1652289966_deprecate-search-stream-generation-method/up.sql",
        "codeinsights/1656517037_group_by/down.sql",
        "codeinsights/1656517037_group_by/metadata.yaml",
        "codeinsights/1656517037_group_by/up.sql",
        "codeinsights/1656608833_track_backfill_attempts/down.sql",
        "codeinsights/1656608833_track_backfill_attempts/metadata.yaml",
        "codeinsights/1656608833_track_backfill_attempts/up.sql",
        "codeinsights/squashed.sql",
        "codeintel/1000000033_squashed_migrations_privileged/down.sql",
        "codeintel/1000000033_squashed_migrations_privileged/metadata.yaml",
        "codeintel/1000000033_squashed_migrations_privileged/up.sql",
        "codeintel/1000000034_squashed_migrations_unprivileged/down.sql",
        "codeintel/1000000034_squashed_migrations_unprivileged/metadata.yaml",
        "codeintel/1000000034_squashed_migrations_unprivileged/up.sql",
        "codeintel/squashed.sql",
        "frontend/1646027072_squashed_migrations_privileged/down.sql",
        "frontend/1646027072_squashed_migrations_privileged/metadata.yaml",
        "frontend/1646027072_squashed_migrations_privileged/up.sql",
        "frontend/1646306565_squashed_migrations_unprivileged/down.sql",
        "frontend/1646306565_squashed_migrations_unprivileged/metadata.yaml",
        "frontend/1646306565_squashed_migrations_unprivileged/up.sql",
        "frontend/1646652951_store_org_open_beta_metadata/down.sql",
        "frontend/1646652951_store_org_open_beta_metadata/metadata.yaml",
        "frontend/1646652951_store_org_open_beta_metadata/up.sql",
        "frontend/1646741362_add_gitserver_repos_repo_size_bytes_column/down.sql",
        "frontend/1646741362_add_gitserver_repos_repo_size_bytes_column/metadata.yaml",
        "frontend/1646741362_add_gitserver_repos_repo_size_bytes_column/up.sql",
        "frontend/1646847163_code_monitor_last_searched/down.sql",
        "frontend/1646847163_code_monitor_last_searched/metadata.yaml",
        "frontend/1646847163_code_monitor_last_searched/up.sql",
        "frontend/1646848295_indexer_version/down.sql",
        "frontend/1646848295_indexer_version/metadata.yaml",
        "frontend/1646848295_indexer_version/up.sql",
        "frontend/1647282553_Add_queued_at_to_workerutil_tables/down.sql",
        "frontend/1647282553_Add_queued_at_to_workerutil_tables/metadata.yaml",
        "frontend/1647282553_Add_queued_at_to_workerutil_tables/up.sql",
        "frontend/1647849753_drop_backup_tables/down.sql",
        "frontend/1647849753_drop_backup_tables/metadata.yaml",
        "frontend/1647849753_drop_backup_tables/up.sql",
        "frontend/1647860082_add_localclone_worker_table/down.sql",
        "frontend/1647860082_add_localclone_worker_table/metadata.yaml",
        "frontend/1647860082_add_localclone_worker_table/up.sql",
        "frontend/1648051770_cascade_feature_flag_updates/down.sql",
        "frontend/1648051770_cascade_feature_flag_updates/metadata.yaml",
        "frontend/1648051770_cascade_feature_flag_updates/up.sql",
        "frontend/1648115472_add_localclone_worker_view/down.sql",
        "frontend/1648115472_add_localclone_worker_view/metadata.yaml",
        "frontend/1648115472_add_localclone_worker_view/up.sql",
        "frontend/1648195639_add_localclone_worker_queued_at/down.sql",
        "frontend/1648195639_add_localclone_worker_queued_at/metadata.yaml",
        "frontend/1648195639_add_localclone_worker_queued_at/up.sql",
        "frontend/1648524019_int64-ids-user-pending-permissions/down.sql",
        "frontend/1648524019_int64-ids-user-pending-permissions/metadata.yaml",
        "frontend/1648524019_int64-ids-user-pending-permissions/up.sql",
        "frontend/1648628900_rename_localclone_worker_table/down.sql",
        "frontend/1648628900_rename_localclone_worker_table/metadata.yaml",
        "frontend/1648628900_rename_localclone_worker_table/up.sql",
        "frontend/1649159359_batch_spec_resolution_user_id/down.sql",
        "frontend/1649159359_batch_spec_resolution_user_id/metadata.yaml",
        "frontend/1649159359_batch_spec_resolution_user_id/up.sql",
        "frontend/1649253538_batch_spec_resolution_user_id_non_null/down.sql",
        "frontend/1649253538_batch_spec_resolution_user_id_non_null/metadata.yaml",
        "frontend/1649253538_batch_spec_resolution_user_id_non_null/up.sql",
        "frontend/1649269601_remove_unused_code_monitor_columns/down.sql",
        "frontend/1649269601_remove_unused_code_monitor_columns/metadata.yaml",
        "frontend/1649269601_remove_unused_code_monitor_columns/up.sql",
        "frontend/1649432863_no_hash_for_code_monitor_last_searched/down.sql",
        "frontend/1649432863_no_hash_for_code_monitor_last_searched/metadata.yaml",
        "frontend/1649432863_no_hash_for_code_monitor_last_searched/up.sql",
        "frontend/1649441222_lsif_uploads_audit_logging/down.sql",
        "frontend/1649441222_lsif_uploads_audit_logging/metadata.yaml",
        "frontend/1649441222_lsif_uploads_audit_logging/up.sql",
        "frontend/1649759318_change_default_invite_quota/down.sql",
        "frontend/1649759318_change_default_invite_quota/metadata.yaml",
        "frontend/1649759318_change_default_invite_quota/up.sql",
        "frontend/1650456734_configuration_policies_audit_logging/down.sql",
        "frontend/1650456734_configuration_policies_audit_logging/metadata.yaml",
        "frontend/1650456734_configuration_policies_audit_logging/up.sql",
        "frontend/1650637472_Add_codeintel_langugage_support_requests_table/down.sql",
        "frontend/1650637472_Add_codeintel_langugage_support_requests_table/metadata.yaml",
        "frontend/1650637472_Add_codeintel_langugage_support_requests_table/up.sql",
        "frontend/1651061363_lsif_uploads_audit_logging_reason/down.sql",
        "frontend/1651061363_lsif_uploads_audit_logging_reason/metadata.yaml",
        "frontend/1651061363_lsif_uploads_audit_logging_reason/up.sql",
        "frontend/1651077257_lsif_dirty_repo_timestamp/down.sql",
        "frontend/1651077257_lsif_dirty_repo_timestamp/metadata.yaml",
        "frontend/1651077257_lsif_dirty_repo_timestamp/up.sql",
        "frontend/1651159431_fix-maven-dependency-repos-name/down.sql",
        "frontend/1651159431_fix-maven-dependency-repos-name/metadata.yaml",
        "frontend/1651159431_fix-maven-dependency-repos-name/up.sql",
        "frontend/1652143849_drop_constraint_from_filter_column_in_lsif_references_table/down.sql",
        "frontend/1652143849_drop_constraint_from_filter_column_in_lsif_references_table/metadata.yaml",
        "frontend/1652143849_drop_constraint_from_filter_column_in_lsif_references_table/up.sql",
        "frontend/1652175864_add-unrestricted-to-repo-permissions/down.sql",
        "frontend/1652175864_add-unrestricted-to-repo-permissions/metadata.yaml",
        "frontend/1652175864_add-unrestricted-to-repo-permissions/up.sql",
        "frontend/1652189866_Add_lockfiles_tables/down.sql",
        "frontend/1652189866_Add_lockfiles_tables/metadata.yaml",
        "frontend/1652189866_Add_lockfiles_tables/up.sql",
        "frontend/1652228814_index_bitbucket_cloud_commit/down.sql",
        "frontend/1652228814_index_bitbucket_cloud_commit/metadata.yaml",
        "frontend/1652228814_index_bitbucket_cloud_commit/up.sql",
        "frontend/1652707934_add_last_check_at_to_codeintel_lockfile_references/down.sql",
        "frontend/1652707934_add_last_check_at_to_codeintel_lockfile_references/metadata.yaml",
        "frontend/1652707934_add_last_check_at_to_codeintel_lockfile_references/up.sql",
        "frontend/1652946496_add_trigger_to_insert_gitserver_repo/down.sql",
        "frontend/1652946496_add_trigger_to_insert_gitserver_repo/metadata.yaml",
        "frontend/1652946496_add_trigger_to_insert_gitserver_repo/up.sql",
        "frontend/1652964210_add_last_lockfile_scan_table/down.sql",
        "frontend/1652964210_add_last_lockfile_scan_table/metadata.yaml",
        "frontend/1652964210_add_last_lockfile_scan_table/up.sql",
        "frontend/1653334014_Remove_default_from_out_of_band_migrations_created_timestamp/down.sql",
        "frontend/1653334014_Remove_default_from_out_of_band_migrations_created_timestamp/metadata.yaml",
        "frontend/1653334014_Remove_default_from_out_of_band_migrations_created_timestamp/up.sql",
        "frontend/1653472246_add_nps_survey_fields/down.sql",
        "frontend/1653472246_add_nps_survey_fields/metadata.yaml",
        "frontend/1653472246_add_nps_survey_fields/up.sql",
        "frontend/1653479179_audit_log_op_and_seq/down.sql",
        "frontend/1653479179_audit_log_op_and_seq/metadata.yaml",
        "frontend/1653479179_audit_log_op_and_seq/up.sql",
        "frontend/1653524883_Create_view_for_batch_spec_workspace_execution_worker/down.sql",
        "frontend/1653524883_Create_view_for_batch_spec_workspace_execution_worker/metadata.yaml",
        "frontend/1653524883_Create_view_for_batch_spec_workspace_execution_worker/up.sql",
        "frontend/1654116265_add_unique_index_to_external_services/down.sql",
        "frontend/1654116265_add_unique_index_to_external_services/metadata.yaml",
        "frontend/1654116265_add_unique_index_to_external_services/up.sql",
        "frontend/1654168174_add_explicit_permissions_bitbucket_projects_jobs_table/down.sql",
        "frontend/1654168174_add_explicit_permissions_bitbucket_projects_jobs_table/metadata.yaml",
        "frontend/1654168174_add_explicit_permissions_bitbucket_projects_jobs_table/up.sql",
        "frontend/1654770608/down.sql",
        "frontend/1654770608/metadata.yaml",
        "frontend/1654770608/up.sql",
        "frontend/1654848945_add_explicit_permissions_bitbucket_projects_jobs_index/down.sql",
        "frontend/1654848945_add_explicit_permissions_bitbucket_projects_jobs_index/metadata.yaml",
        "frontend/1654848945_add_explicit_permissions_bitbucket_projects_jobs_index/up.sql",
        "frontend/1654872407_fast_cascade_delete_batch_specs_1/down.sql",
        "frontend/1654872407_fast_cascade_delete_batch_specs_1/metadata.yaml",
        "frontend/1654872407_fast_cascade_delete_batch_specs_1/up.sql",
        "frontend/1654874148_fast_cascade_delete_batch_specs_2/down.sql",
        "frontend/1654874148_fast_cascade_delete_batch_specs_2/metadata.yaml",
        "frontend/1654874148_fast_cascade_delete_batch_specs_2/up.sql",
        "frontend/1654874153_fast_cascade_delete_batch_specs_3/down.sql",
        "frontend/1654874153_fast_cascade_delete_batch_specs_3/metadata.yaml",
        "frontend/1654874153_fast_cascade_delete_batch_specs_3/up.sql",
        "frontend/1655037388_faster_changeset_spec_cleanup_1/down.sql",
        "frontend/1655037388_faster_changeset_spec_cleanup_1/metadata.yaml",
        "frontend/1655037388_faster_changeset_spec_cleanup_1/up.sql",
        "frontend/1655037391_faster_changeset_spec_cleanup_2/down.sql",
        "frontend/1655037391_faster_changeset_spec_cleanup_2/metadata.yaml",
        "frontend/1655037391_faster_changeset_spec_cleanup_2/up.sql",
        "frontend/1655067139_fixup_worker_fairness_view/down.sql",
        "frontend/1655067139_fixup_worker_fairness_view/metadata.yaml",
        "frontend/1655067139_fixup_worker_fairness_view/up.sql",
        "frontend/1655105391_lockfile_dependency_graph/down.sql",
        "frontend/1655105391_lockfile_dependency_graph/metadata.yaml",
        "frontend/1655105391_lockfile_dependency_graph/up.sql",
        "frontend/1655128668_add_indices_to_explicit_permissions_bitbucket_projects_jobs_table/down.sql",
        "frontend/1655128668_add_indices_to_explicit_permissions_bitbucket_projects_jobs_table/metadata.yaml",
        "frontend/1655128668_add_indices_to_explicit_permissions_bitbucket_projects_jobs_table/up.sql",
        "frontend/1655157509_no_more_ssbc_access_tokens/down.sql",
        "frontend/1655157509_no_more_ssbc_access_tokens/metadata.yaml",
        "frontend/1655157509_no_more_ssbc_access_tokens/up.sql",
        "frontend/1655226733_hstore_aggregate_func/down.sql",
        "frontend/1655226733_hstore_aggregate_func/metadata.yaml",
        "frontend/1655226733_hstore_aggregate_func/up.sql",
        "frontend/1655328928_fix_code_insights_failed_tcp_error/down.sql",
        "frontend/1655328928_fix_code_insights_failed_tcp_error/metadata.yaml",
        "frontend/1655328928_fix_code_insights_failed_tcp_error/up.sql",
        "frontend/1655412173_code_insights_queue_missing_index/down.sql",
        "frontend/1655412173_code_insights_queue_missing_index/metadata.yaml",
        "frontend/1655412173_code_insights_queue_missing_index/up.sql",
        "frontend/1655454264_add_lockfile_indexing_enabled_to_policy/down.sql",
        "frontend/1655454264_add_lockfile_indexing_enabled_to_policy/metadata.yaml",
        "frontend/1655454264_add_lockfile_indexing_enabled_to_policy/up.sql",
        "frontend/1655481894_faster_ssbc_dequeue/down.sql",
        "frontend/1655481894_faster_ssbc_dequeue/metadata.yaml",
        "frontend/1655481894_faster_ssbc_dequeue/up.sql",
        "frontend/1655737737_drop_unused_idx_batch_spec_workspace_execution_jobs_user_id/down.sql",
        "frontend/1655737737_drop_unused_idx_batch_spec_workspace_execution_jobs_user_id/metadata.yaml",
        "frontend/1655737737_drop_unused_idx_batch_spec_workspace_execution_jobs_user_id/up.sql",
        "frontend/1655763641_faster_workspace_batch_spec_lookup/down.sql",
        "frontend/1655763641_faster_workspace_batch_spec_lookup/metadata.yaml",
        "frontend/1655763641_faster_workspace_batch_spec_lookup/up.sql",
        "frontend/1655843069_insights_faster_job_status/down.sql",
        "frontend/1655843069_insights_faster_job_status/metadata.yaml",
        "frontend/1655843069_insights_faster_job_status/up.sql",
        "frontend/1656447205_create_repo_description_trgm_idx/down.sql",
        "frontend/1656447205_create_repo_description_trgm_idx/metadata.yaml",
        "frontend/1656447205_create_repo_description_trgm_idx/up.sql",
        "frontend/1657106983_faster_failure_msg_query/down.sql",
        "frontend/1657106983_faster_failure_msg_query/metadata.yaml",
        "frontend/1657106983_faster_failure_msg_query/up.sql",
        "frontend/1657107627_drop_duplicate_index_sync_jobs_state/down.sql",
        "frontend/1657107627_drop_duplicate_index_sync_jobs_state/metadata.yaml",
        "frontend/1657107627_drop_duplicate_index_sync_jobs_state/up.sql",
        "frontend/1657279116_faster_dequeues_cm_action_jobs/down.sql",
        "frontend/1657279116_faster_dequeues_cm_action_jobs/metadata.yaml",
        "frontend/1657279116_faster_dequeues_cm_action_jobs/up.sql",
        "frontend/1657279170_faster_dequeues_cm_trigger_jobs/down.sql",
        "frontend/1657279170_faster_dequeues_cm_trigger_jobs/metadata.yaml",
        "frontend/1657279170_faster_dequeues_cm_trigger_jobs/up.sql",
        "frontend/1657635365_add_fidelity_to_lockfiles/down.sql",
        "frontend/1657635365_add_fidelity_to_lockfiles/metadata.yaml",
        "frontend/1657635365_add_fidelity_to_lockfiles/up.sql",
        "frontend/1657663493_cancel_worker_feature/down.sql",
        "frontend/1657663493_cancel_worker_feature/metadata.yaml",
        "frontend/1657663493_cancel_worker_feature/up.sql",
        "frontend/1658174103_workspace_execution_user_queues/down.sql",
        "frontend/1658174103_workspace_execution_user_queues/metadata.yaml",
        "frontend/1658174103_workspace_execution_user_queues/up.sql",
        "frontend/1658225452_fast_cm_trigger_jobs_delete/down.sql",
        "frontend/1658225452_fast_cm_trigger_jobs_delete/metadata.yaml",
        "frontend/1658225452_fast_cm_trigger_jobs_delete/up.sql",
        "frontend/1658255432_add_missing_constraints/down.sql",
        "frontend/1658255432_add_missing_constraints/metadata.yaml",
        "frontend/1658255432_add_missing_constraints/up.sql",
        "frontend/1658384388_normalize_product_licenseslicense_key_fields/down.sql",
        "frontend/1658384388_normalize_product_licenseslicense_key_fields/metadata.yaml",
        "frontend/1658384388_normalize_product_licenseslicense_key_fields/up.sql",
        "frontend/squashed.sql",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/migrations",
    visibility = ["//visibility:public"],
)
