load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "github-proxy_lib",
    srcs = ["github-proxy.go"],
    importpath = "github.com/sourcegraph/sourcegraph/cmd/github-proxy",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/conf",
        "//internal/debugserver",
        "//internal/env",
        "//internal/goroutine",
        "//internal/hostname",
        "//internal/logging",
        "//internal/trace",
        "//internal/trace/ot",
        "//internal/tracer",
        "//internal/version",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_gorilla_handlers//:handlers",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_sourcegraph_log//:log",
    ],
)

go_binary(
    name = "github-proxy",
    embed = [":github-proxy_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "github-proxy_test",
    srcs = ["github-proxy_test.go"],
    embed = [":github-proxy_lib"],
    deps = [
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_image(
    name = "image",
    embed = [":github-proxy_lib"],
    visibility = ["//visibility:public"],
)
