load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "gitserver_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/cmd/gitserver",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/frontend/envvar",
        "//cmd/gitserver/server",
        "//internal/actor",
        "//internal/api",
        "//internal/authz",
        "//internal/codeintel/dependencies",
        "//internal/codeintel/dependencies/live",
        "//internal/conf",
        "//internal/conf/conftypes",
        "//internal/database",
        "//internal/database/connections/live",
        "//internal/debugserver",
        "//internal/encryption/keyring",
        "//internal/env",
        "//internal/extsvc",
        "//internal/extsvc/auth",
        "//internal/extsvc/crates",
        "//internal/extsvc/github",
        "//internal/extsvc/gomodproxy",
        "//internal/extsvc/npm",
        "//internal/extsvc/pypi",
        "//internal/goroutine",
        "//internal/hostname",
        "//internal/httpcli",
        "//internal/jsonc",
        "//internal/logging",
        "//internal/observation",
        "//internal/profiler",
        "//internal/ratelimit",
        "//internal/repos",
        "//internal/requestclient",
        "//internal/trace",
        "//internal/trace/ot",
        "//internal/tracer",
        "//internal/types",
        "//internal/version",
        "//schema",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_json_iterator_go//:go",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
        "@com_github_tidwall_gjson//:gjson",
        "@org_golang_x_sync//semaphore",
        "@org_golang_x_time//rate",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "gitserver",
    embed = [":gitserver_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "gitserver_test",
    srcs = ["main_test.go"],
    embed = [":gitserver_lib"],
    deps = [
        "//cmd/frontend/envvar",
        "//cmd/gitserver/server",
        "//internal/api",
        "//internal/codeintel/dependencies",
        "//internal/conf",
        "//internal/database",
        "//internal/extsvc",
        "//internal/extsvc/github",
        "//internal/types",
        "//schema",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_log//logtest",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

go_image(
    name = "image",
    embed = [":gitserver_lib"],
    visibility = ["//visibility:public"],
)
