load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "loadtest_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/cmd/loadtest",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/env",
        "@com_github_inconshreveable_log15//:log15",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_binary(
    name = "loadtest",
    embed = [":loadtest_lib"],
    visibility = ["//visibility:public"],
)
