load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "migrator_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/cmd/migrator",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/database/connections/live",
        "//internal/database/migration/cliutil",
        "//internal/database/migration/store",
        "//internal/database/postgresdsn",
        "//internal/env",
        "//internal/hostname",
        "//internal/observation",
        "//internal/trace",
        "//internal/version",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_sourcegraph_lib//output",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_binary(
    name = "migrator",
    embed = [":migrator_lib"],
    visibility = ["//visibility:public"],
)
