load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "searcher_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/cmd/searcher",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/searcher/internal/search",
        "//internal/actor",
        "//internal/api",
        "//internal/conf",
        "//internal/conf/conftypes",
        "//internal/database",
        "//internal/database/connections/live",
        "//internal/debugserver",
        "//internal/env",
        "//internal/gitserver",
        "//internal/goroutine",
        "//internal/hostname",
        "//internal/logging",
        "//internal/observation",
        "//internal/profiler",
        "//internal/trace",
        "//internal/trace/ot",
        "//internal/tracer",
        "//internal/version",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@com_github_keegancsmith_tmpfriend//:tmpfriend",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "searcher",
    embed = [":searcher_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":searcher_lib"],
    visibility = ["//visibility:public"],
)
