load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bkstats_lib",
    srcs = ["main.go"],
    importpath = "github.com/sourcegraph/sourcegraph/dev/bkstats",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_buildkite_go_buildkite_v3//buildkite",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_binary(
    name = "bkstats",
    embed = [":bkstats_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "image",
    embed = [":bkstats_lib"],
    visibility = ["//visibility:public"],
)
