load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "encryption",
    srcs = [
        "key.go",
        "noop.go",
        "rsa.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/encryption",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_google_uuid//:uuid",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
        "@org_golang_x_crypto//ssh",
    ],
)

go_test(
    name = "encryption_test",
    srcs = ["rsa_test.go"],
    embed = [":encryption"],
)
