load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "inventory",
    srcs = [
        "context.go",
        "entries.go",
        "inventory.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/inventory",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_go_enry_go_enry_v2//:go-enry",
        "@com_github_go_enry_go_enry_v2//data",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_test(
    name = "inventory_test",
    srcs = [
        "entries_test.go",
        "inventory_test.go",
    ],
    embed = [":inventory"],
    deps = [
        "//internal/fileutil",
        "@com_github_go_enry_go_enry_v2//:go-enry",
        "@com_github_google_go_cmp//cmp",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)
