load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jsonc",
    srcs = ["jsonc.go"],
    importpath = "github.com/sourcegraph/sourcegraph/internal/jsonc",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_sourcegraph_jsonx//:jsonx",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_test(
    name = "jsonc_test",
    srcs = ["jsonc_test.go"],
    embed = [":jsonc"],
)
