load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "luasandbox",
    srcs = [
        "builtins.go",
        "globals.go",
        "init.go",
        "libs.go",
        "observability.go",
        "sandbox.go",
        "service.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/luasandbox",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/luasandbox/libs",
        "//internal/luasandbox/util",
        "//internal/metrics",
        "//internal/observation",
        "//internal/trace",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sourcegraph_log//:log",
        "@com_github_yuin_gopher_lua//:gopher-lua",
        "@com_layeh_gopher_luar//:gopher-luar",
    ],
)

go_test(
    name = "luasandbox_test",
    srcs = ["sandbox_test.go"],
    embed = [":luasandbox"],
    deps = [
        "//internal/luasandbox/util",
        "//internal/observation",
        "@com_github_google_go_cmp//cmp",
        "@com_github_yuin_gopher_lua//:gopher-lua",
    ],
)
