load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "redispool",
    srcs = [
        "redispool.go",
        "sysreq.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/redispool",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/env",
        "//internal/lazyregexp",
        "//internal/sysreq",
        "@com_github_gomodule_redigo//redis",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_test(
    name = "redispool_test",
    srcs = ["redispool_test.go"],
    embed = [":redispool"],
)
