load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "repotrackutil",
    srcs = ["repouri.go"],
    importpath = "github.com/sourcegraph/sourcegraph/internal/repotrackutil",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/lazyregexp",
    ],
)

go_test(
    name = "repotrackutil_test",
    srcs = ["repouri_test.go"],
    embed = [":repotrackutil"],
    deps = ["//internal/api"],
)
