load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "src-prometheus",
    srcs = [
        "prometheus.go",
        "types.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/src-prometheus",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/conf",
        "//internal/env",
        "@com_github_inconshreveable_log15//:log15",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
    ],
)

go_test(
    name = "src-prometheus_test",
    srcs = ["prometheus_test.go"],
    embed = [":src-prometheus"],
    deps = ["@com_github_sourcegraph_sourcegraph_lib//errors"],
)
