load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "trace",
    srcs = [
        "buckets.go",
        "context.go",
        "fields.go",
        "httptrace.go",
        "logger.go",
        "trace.go",
        "tracer.go",
        "url.go",
    ],
    importpath = "github.com/sourcegraph/sourcegraph/internal/trace",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/conf/conftypes",
        "//internal/env",
        "//internal/repotrackutil",
        "//internal/trace/ot",
        "//internal/trace/policy",
        "@com_github_cockroachdb_redact//:redact",
        "@com_github_felixge_httpsnoop//:httpsnoop",
        "@com_github_gorilla_mux//:mux",
        "@com_github_keegancsmith_sqlf//:sqlf",
        "@com_github_opentracing_opentracing_go//:opentracing-go",
        "@com_github_opentracing_opentracing_go//ext",
        "@com_github_opentracing_opentracing_go//log",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sourcegraph_log//:log",
        "@com_github_sourcegraph_log//otfields",
        "@com_github_sourcegraph_sourcegraph_lib//errors",
        "@com_github_uber_jaeger_client_go//:jaeger-client-go",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_net//trace",
    ],
)
